src/companion/assets/css/app.styl
// Remember to use rems and ems. http://css-tricks.com/rems-ems.

@import '~bootstrap/dist/css/bootstrap.css'
@import '~pages/css/pages-icons.css'
@import '~pages/css/pages.css'
//@import '~inspinia/styl/variables.styl'


// http://phonegap-tips.com/articles/essential-phonegap-css-webkit-tap-highlight-color.html
*
  -webkit-tap-highlight-color rgba(0,0,0,0)

// Goodness.
*, ::after, ::before
  box-sizing border-box

.modal-header.bg-primary
  background-color: $primary

.page-sidebar .sidebar-menu .menu-items > li > a > .title {
   width: 100%;
}

.portlet-progress > .progress-circle-indeterminate,
.portlet-progress > .portlet-bar-indeterminate {
   top: 10em;
}

.table th {

  border-left-color: rgba(230, 230, 230, 0.701961);
  border-left-style: solid;
  border-left-width: 1px;

  border-right-color: rgba(230, 230, 230, 0.701961);
  border-right-style: solid;
  border-right-width: 1px;
}

.table.table-hover tbody tr:hover > td {
  background: #daeffd !important;
}

//combined striped and hover didn't work well on odd rows with default pages
.table.table-striped tbody tr.even > td {
  background: #f9f9f9 !important;
}

.table.table-striped tbody tr.odd > td {
  background: #fff !important;
}

.table.table-hover tbody tr.row-details:hover > td {
 background: #fff !important;
}

.form-group-default label.required:after {
  color: #f55753;
  content: " *";
  font-family: arial;
}

.newrow-enter > td {
    opacity: 0.1;
}

.newrow-enter.newrow-enter-active > td {
  opacity: 1;
  transition: opacity 2s cubic-bezier(0.68, -0.55, 0.27, 1.55)
}

input[type="file"].form-control {
  margin-top: .10em;
}

